artik053: sidk_s5jt200: fix warning messages when building
DEPPATH needs to point to $(TOPDIR)/arch in order to build Make.dep
properly. This suppresses following build errors:

    make[1]: Entering directory '/home/heesub/Documents/artik053/tizenrt/os/arch/arm/src'
    make[2]: Entering directory '/home/heesub/Documents/artik053/tizenrt/os/arch/arm/src/artik053/src'
    Makefile:104: recipe for target '.depend' failed
    make[2]: *** [.depend] Error 1
    make[2]: Leaving directory '/home/heesub/Documents/artik053/tizenrt/os/arch/arm/src/artik053/src'
    Makefile:215: recipe for target '.depend' failed
    make[1]: *** [.depend] Error 2

Change-Id: I96feda1a095eb8d47feb17fcd1ccf56cffd84410
Signed-off-by: Heesub Shin <heesub.shin@samsung.com>

--- a/os/arch/arm/src/artik053/src/Makefile
+++ b/os/arch/arm/src/artik053/src/Makefile
@@ -53,6 +53,7 @@
 
 -include $(TOPDIR)/Make.defs
 
+DEPPATH = --dep-path .
 CFLAGS += -I$(TOPDIR)/sched
 ASRCS =
 CSRCS = artik053_boot.c \
@@ -69,6 +70,7 @@ endif
 
 # boardctl support
 ifeq ($(CONFIG_LIB_BOARDCTL),y)
+DEPPATH += --dep-path $(TOPDIR)/arch
 VPATH += :$(TOPDIR)/arch
 CSRCS += boardctl.c
 endif
@@ -101,7 +103,7 @@ libboard$(LIBEXT): $(OBJS)
 	$(call ARCHIVE, $@, $(OBJS))
 
 .depend: Makefile $(SRCS)
-	$(Q) $(MKDEP) $(CC) -- $(CFLAGS) -- $(SRCS) >Make.dep
+	$(Q) $(MKDEP) $(DEPPATH) $(CC) -- $(CFLAGS) -- $(SRCS) >Make.dep
 	$(Q) touch $@
 
 depend: .depend
