Add ARTIK SDK sample program
This patch adds the "artik_onboarding" example program
that contains the onboarding service and some commands
for testing various APIs from the ARTIK SDK such as
http, websocket, wifi, cloud, security, etc...

The ARTIK053 "typical" configuration is also modified to
include the ARTIK SDK and the sample program. The
ARTIK SDK binary library is updated as well, to include
latest bug fixes.

Change-Id: I671191e277beec698a55cc4e4c4daf611718a6f1
Signed-off-by: Gregory Lemercier <g.lemercier@samsung.com>
Signed-off-by: Camille Bégué <c.begue@samsung.com>

--- a/external/Kconfig
+++ b/external/Kconfig
@@ -134,12 +134,25 @@ if ARTIK_SDK
 config ARTIK_SDK_SYSTEMIO
 	bool "ARTIK SDK - System IO library"
 	default n
+	select SPI
+	select ADC
+	select GPIO
+	select PWM
+	select S5J_I2C
+	select S5J_SPI
+	select S5J_ADC
+	select S5J_PWM
 	---help---
 		include the System IO library of the ARTIK SDK
 
 config ARTIK_SDK_CONNECTIVITY
 	bool "ARTIK SDK - Connectivity library"
 	default n
+	select NETUTILS_DHCPD
+	select NETUTILS_DHCPC
+	select NETUTILS_WEBSERVER
+	select NETUTILS_WEBSOCKET
+	select NETUTILS_WEBCLIENT
 	---help---
 		include the Connectivity library of the ARTIK SDK
 
@@ -148,11 +161,5 @@ config ARTIK_SDK_WIFI
 	default n
 	---help---
 		include the Wi-Fi library of the ARTIK SDK
-
-config ARTIK_SDK_LWM2M
-	bool "ARTIK SDK - LWM2M library"
-	default n
-	---help---
-		include the LWM2M library of the ARTIK SDK
 
 endif
